kubernetes/navidrome/navidrome.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: navidrome
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome
  namespace: navidrome
  annotations:
    keel.sh/policy: all
spec:
  replicas: 1
  selector:
    matchLabels:
      app: navidrome
  template:
    metadata:
      labels:
        app: navidrome
    spec:
      containers:
      - name: navidrome
        image: deluan/navidrome:latest@sha256:9fa40b3d8dec43ceb2213d1fa551da3dcfef6ac6d19c2e534efb92527c2bafd2
        ports:
        - containerPort: 4533
          name: http
        volumeMounts:
        - name: music
          mountPath: /music
          readOnly: true
        - name: data
          mountPath: /data
      volumes:
      - name: music
        persistentVolumeClaim:
          claimName: navidrome-music-pvc
      - name: data
        persistentVolumeClaim:
          claimName: navidrome-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: navidrome
  namespace: navidrome
spec:
  type: ClusterIP
  selector:
    app: navidrome
  ports:
  - name: http
    port: 4533
    targetPort: 4533
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: navidrome-ingress
  namespace: navidrome
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  tls:
  - hosts:
    - navidrome.home.tom-mendy.com
  rules:
  - host: navidrome.home.tom-mendy.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: navidrome
            port:
              number: 4533
